Add popped bubble fruit

--- a/src/main/resources/assets/rainworldbiomes/lang/en_us.json
+++ b/src/main/resources/assets/rainworldbiomes/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-    "item.rainworldbiomes.bubble_fruit": "Bubble Fruit"
+    "item.rainworldbiomes.bubble_fruit": "Bubble Fruit",
+    "item.rainworldbiomes.popped_bubble_fruit": "Bubble Fruit"
 }
