Add foods creative tab

--- a/src/main/resources/assets/rainworldbiomes/lang/en_us.json
+++ b/src/main/resources/assets/rainworldbiomes/lang/en_us.json
@@ -1,4 +1,6 @@
 {
     "item.rainworldbiomes.bubble_fruit": "Bubble Fruit",
-    "item.rainworldbiomes.popped_bubble_fruit": "Bubble Fruit"
+    "item.rainworldbiomes.popped_bubble_fruit": "Bubble Fruit",
+
+    "creativetab.rwb_foods": "RWB Foods"
 }
