Add concrete_block assets

--- a/src/main/resources/assets/rainworldbiomes/lang/en_us.json
+++ b/src/main/resources/assets/rainworldbiomes/lang/en_us.json
@@ -2,5 +2,7 @@
     "item.rainworldbiomes.bubble_fruit": "Bubble Fruit",
     "item.rainworldbiomes.popped_bubble_fruit": "Bubble Fruit",
 
+    "block.rainworldbiomes.concrete_block": "Concrete Block",
+
     "creativetab.rwb_foods": "RWB Foods"
 }
