Add lang entry for the blocks creative tab

--- a/src/main/resources/assets/rainworldbiomes/lang/en_us.json
+++ b/src/main/resources/assets/rainworldbiomes/lang/en_us.json
@@ -4,5 +4,6 @@
 
     "block.rainworldbiomes.concrete_block": "Concrete Block",
 
+    "creativetab.rwb_blocks": "RWB Blocks",
     "creativetab.rwb_foods": "RWB Foods"
 }
